modifcation du titre du projet

--- a/index.html
+++ b/index.html
@@ -977,8 +977,12 @@
                             <span class="project-tech-button">API</span>
                         </div>
                         <h3>Weather & SQL Projects</h3>
-                        <p>Collecte automatique des données météo via OpenWeather API et stockage dans une base SQL pour
-                            analyse.</p>
+                        <p>
+                            Projets réalisés : Gestion d’une bibliothèque avec SQL et connexion à une base distante pour
+                            interroger livres, auteurs et emprunteurs. Collecte automatique de données météo via l’API
+                            OpenWeather, nettoyage et stockage dans une base SQL pour analyses et exploitation.
+                        </p>
+
                     </div>
                 </div>
 
