--- a/index.html
+++ b/index.html
@@ -948,6 +948,58 @@
             <div class="projects-grid" style="grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));">
 
 
+
+
+                <!-- Trustpilot Scraping & SQLite Pipeline -->
+                <div class="project-card">
+                    <div class="project-image-wrapper">
+                        <img src="images/trustpilot_project.png" alt="Trustpilot Scraping Project"
+                            class="project-image">
+                        <div class="project-overlay">
+                            <a href="https://github.com/NdongoMamoudou/trustpilot-scraping-sqlite-pipeline"
+                                target="_blank" rel="noopener noreferrer" class="project-link-btn">
+                                <svg fill="currentColor" viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745 .083-.729 .083-.729 1.205 .084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492 .997 .107-.775 .418-1.305 .762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311 .469-2.381 1.236-3.221-.124-.303-.535-1.524 .117-3.176 0 0 1.008-.322 3.301 1.23 .957-.266 1.983-.399 3.003-.404 1.02 .005 2.047 .138 3.006 .404 2.291-1.552 3.297-1.23 3.297-1.23 .653 1.653 .242 2.874 .118 3.176 .77 .84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921 .43 .372 .823 1.102 .823 2.222 v3.293 c0 .319 .192 .694 .801 .576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                                </svg>
+                                Voir sur GitHub
+                            </a>
+                            <a href="#" class="project-link-btn">
+                                <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                                </svg>
+                                Voir la démo
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-info">
+                        <div class="project-tech">
+                            <span class="project-tech-button">Python</span>
+                            <span class="project-tech-button">Selenium</span>
+                            <span class="project-tech-button">BeautifulSoup</span>
+                            <span class="project-tech-button">SQLite</span>
+                            <span class="project-tech-button">Pipeline ETL</span>
+                        </div>
+
+                        <h3>Trustpilot Scraping & SQLite Pipeline</h3>
+
+                        <p>
+                            Pipeline complet de scraping automatisé des avis Trustpilot : extraction via Selenium,
+                            parsing avec
+                            BeautifulSoup, nettoyage des données, stockage dans un fichier CSV puis insertion dans une
+                            base SQLite.
+                            Le workflow entier est orchestré dans un pipeline ETL professionnel (Extract → Clean →
+                            Load).
+                        </p>
+                    </div>
+                </div>
+
+
+
+
+
                 <!-- 4) Weather & SQL Projects -->
                 <div class="project-card">
                     <div class="project-image-wrapper">
